Project Fish_KLMPK/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\extensions\greenfoot.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\bluejcore.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\bluejeditor.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\bluejext.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\AppleJavaExtensions.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\junit-4.11.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\bluej.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\commons-httpclient-3.1.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\commons-codec-1.3.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\jl1.0.1.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\opencsv-2.3.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\xom-1.2.9.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\lang-stride.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\guava-17.0.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\javassist-3.18.0.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\commons-vfs2-2.0.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\httpcore-4.1.jar;C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\httpmime-4.1.1.jar;D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish
-d
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\LENOVO\Downloads\Compressed\Greenfoot-windows-310\greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java
<---- end of javadoc command ---->
Loading source file D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java...
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:20: error: <identifier> expected
        addObject(new Fish(). 100. 200);
                             ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:20: error: ';' expected
        addObject(new Fish(). 100. 200);
                                  ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:20: error: illegal start of expression
        addObject(new Fish(). 100. 200);
                                      ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:22: error: illegal start of expression
    }
    ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:22: error: ';' expected
    }
     ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:23: error: reached end of file while parsing
}
 ^
D:\Daftar Kuliah Semester 3\Oop pak Yudhi\Project Fish\Laut.java:24: error: reached end of file while parsing
7 errors
